--- a/day - 10 Oct-08-2025/index.html
+++ b/day - 10 Oct-08-2025/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <div class="container">
         <div>
@@ -13,7 +16,9 @@
             <div>
                 <h3>Our CEO</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis. Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam esse.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
                 </p>
                 <button>Read More</button>
             </div>
@@ -23,7 +28,9 @@
             <div>
                 <h3>Our CEO</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis. Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam esse.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
                 </p>
                 <button>Read More</button>
             </div>
@@ -33,7 +40,9 @@
             <div>
                 <h3>Our CEO</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis. Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam esse.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
                 </p>
                 <button>Read More</button>
             </div>
@@ -43,11 +52,110 @@
             <div>
                 <h3>Our CEO</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis. Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam esse.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
+                </p>
+                <button>Read More</button>
+            </div>
+        </div>
+        <div>
+            <img src="./images/pp.jpg" alt="">
+            <div>
+                <h3>Our CEO</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
+                </p>
+                <button>Read More</button>
+            </div>
+        </div>
+        <div>
+            <img src="./images/pp.jpg" alt="">
+            <div>
+                <h3>Our CEO</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
+                </p>
+                <button>Read More</button>
+            </div>
+        </div>
+        <div>
+            <img src="./images/pp.jpg" alt="">
+            <div>
+                <h3>Our CEO</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
+                </p>
+                <button>Read More</button>
+            </div>
+        </div>
+        <div>
+            <img src="./images/pp.jpg" alt="">
+            <div>
+                <h3>Our CEO</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
+                </p>
+                <button>Read More</button>
+            </div>
+        </div>
+        <div>
+            <img src="./images/pp.jpg" alt="">
+            <div>
+                <h3>Our CEO</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
+                </p>
+                <button>Read More</button>
+            </div>
+        </div>
+        <div>
+            <img src="./images/pp.jpg" alt="">
+            <div>
+                <h3>Our CEO</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
+                </p>
+                <button>Read More</button>
+            </div>
+        </div>
+        <div>
+            <img src="./images/pp.jpg" alt="">
+            <div>
+                <h3>Our CEO</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
+                </p>
+                <button>Read More</button>
+            </div>
+        </div>
+        <div>
+            <img src="./images/pp.jpg" alt="">
+            <div>
+                <h3>Our CEO</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at ea esse voluptas, quidem omnis.
+                    Quibusdam quo animi nisi maiores odio! Ipsum tempora asperiores voluptas hic ex inventore ullam
+                    esse.
                 </p>
                 <button>Read More</button>
             </div>
         </div>
     </div>
 </body>
+
 </html>
