--- a/day - 12 & 13 Oct-12 Oct-13 2025/index.html
+++ b/day - 12 & 13 Oct-12 Oct-13 2025/index.html
@@ -74,5 +74,25 @@
         </div>
      </section>
     <!-- Banner Bottom Theme End -->
+
+    <!-- Notified Section Start -->
+     <section class="notified">
+        <div class="container">
+            <div>
+                <h2>Get Notified Of Any Updates!</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at elementum mauris. Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis ornare luctus id sollicitudin ante lobortis at.
+                </p>
+                <form action="">
+                    <input type="email" placeholder="Email Address">
+                    <button type="submit">Notify</button>
+                </form>
+            </div>
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/EDb37y_MhRw?si=fAJt0CYPXhvR6k8T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+     </section>
+    <!-- Notified Section End -->
 </body>
 </html>
