--- a/day - 12 & 13 Oct-12 Oct-13 2025/index.html
+++ b/day - 12 & 13 Oct-12 Oct-13 2025/index.html
@@ -94,5 +94,44 @@
         </div>
      </section>
     <!-- Notified Section End -->
+
+    <!-- Touch Section Start -->
+     <section class="touch">
+        <div class="container">
+            <p>
+                “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum varius eleifend ut.”
+            </p>
+            <h4>Jane Hunt</h4>
+            <img src="./images/touch.webp" alt="">
+            <h2>Say Hi & Get in Touch</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse. 
+            </p>
+            <ul>
+                <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-pinterest-p"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+            </ul>
+        </div>
+     </section>
+    <!-- Touch Section End -->
+
+    <!-- Footer Part Start -->
+     <footer>
+        <div class="container">
+            <ul>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Download</a></li>
+                <li><a href="">Press</a></li>
+                <li><a href="">Email</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">Privacy Policy</a></li>
+            </ul>
+        </div>
+     </footer>
+    <!-- Footer Part End -->
 </body>
 </html>
