--- a/day - 16 - 17 Oct-16-2025 - Oct-19-2025/index.html
+++ b/day - 16 - 17 Oct-16-2025 - Oct-19-2025/index.html
@@ -133,7 +133,7 @@
     </div>
     <!-- Carousel end -->
 
-    <div class="container py-5">
+    <div class="container py-5 mb-5">
         <!-- hero section start -->
         <div class="row py-5">
             <div class="col-md-6">
@@ -360,54 +360,66 @@
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item mb-3 border">
                         <h2 class="accordion-header">
-                            <button class="accordion-button bg-white shadow-none" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="accordion-button bg-white shadow-none" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
+                                aria-controls="collapseOne">
                                 What’s the difference between event design and event planning?
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body text-secondary">
-                                Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                Event design and event planning work hand in hand to deliver a successful event.Events
+                                by Knight offer tailor made events. This means we incorporate both event design and
+                                event planning to create that perfect event.
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item mb-3 border">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed bg-white shadow-none" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <button class="accordion-button collapsed bg-white shadow-none" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                aria-controls="collapseTwo">
                                 How early do we need to start planning an event
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body text-secondary">
-                                Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                Event design and event planning work hand in hand to deliver a successful event.Events
+                                by Knight offer tailor made events. This means we incorporate both event design and
+                                event planning to create that perfect event.
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item mb-3 border">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed bg-white shadow-none" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            <button class="accordion-button collapsed bg-white shadow-none" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                                aria-controls="collapseThree">
                                 What is your refund and cancellation policy?
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body text-secondary">
-                                Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                Event design and event planning work hand in hand to deliver a successful event.Events
+                                by Knight offer tailor made events. This means we incorporate both event design and
+                                event planning to create that perfect event.
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item border">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed bg-white shadow-none" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            <button class="accordion-button collapsed bg-white shadow-none" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                                aria-controls="collapseFour">
                                 How do you keep budgets on track?
                             </button>
                         </h2>
                         <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body text-secondary">
-                                Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+                                Event design and event planning work hand in hand to deliver a successful event.Events
+                                by Knight offer tailor made events. This means we incorporate both event design and
+                                event planning to create that perfect event.
                             </div>
                         </div>
                     </div>
@@ -419,6 +431,23 @@
         </div>
         <!-- FAQ section end -->
     </div>
+
+    <!-- Footer part start -->
+    <footer class="container-fluid bg-dark text-white">
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col-md-6 small d-flex justify-content-center justify-content-md-start align-items-center">
+                    © 2020 bike. All rights reserved
+                </div>
+                <div class="col-md-6 d-flex flex-column align-items-center align-items-md-end gap-3">
+                    <p class="mb-0 fs-5">Get the App</p>
+                    <img src="./images/App Store Badge.png" alt="" class="img-fluid">
+                    <img src="./images/Google Play Badge.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer part end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
