--- a/day - 25 - 26 Oct-29-2025 - Oct-30-2025/index.html
+++ b/day - 25 - 26 Oct-29-2025 - Oct-30-2025/index.html
@@ -11,9 +11,9 @@
         <div class="err errName"></div>
         <input type="text" placeholder="Your Email" name="email">
         <div class="err errEmail"></div>
-        <input type="password" placeholder="Your Password" name="pass">
+        <input type="password" placeholder="Your Password" name="pass" id="pass">
         <div class="err errPass"></div>
-        <input type="password" placeholder="Confirm Password" name="cPass">
+        <input type="password" placeholder="Confirm Password" name="cPass" id="cPass">
         <div class="err errCpass"></div>
         Gender :
         <input type="radio" name="gender" value="Male">Male
@@ -33,6 +33,8 @@
             <option value="">--Select Country--</option>
         </select>
         <div class="err errCountry"></div>
+        <input type="checkbox" id="showPass"> Show Password
+        <br><br>
         <button type="submit">Submit</button>
     </form>
 
